EDA Money Spent

--- a/spaceship_titanic.ipynb
+++ b/spaceship_titanic.ipynb
@@ -4230,7 +4230,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x179c4e6ff48>"
+       "<matplotlib.legend.Legend at 0x11ea1794548>"
       ]
      },
      "execution_count": 54,
@@ -4266,7 +4266,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8ab8468d",
+   "id": "6f1c72c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4293,7 +4293,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "394a0933",
+   "id": "761069d3",
    "metadata": {},
    "outputs": [
     {
@@ -4477,7 +4477,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "e2484f7c",
+   "id": "3158d828",
    "metadata": {},
    "outputs": [
     {
@@ -4511,7 +4511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39f07d51",
+   "id": "e1e9c8ca",
    "metadata": {},
    "source": [
     "- From the graph we can see that more than half of those in age groups 0.0 and 1.0 (ages 0-9 and 10-19) were transported to another dimension. Also for those in age group 4.0 (ages 40-49)."
@@ -4519,7 +4519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db60640d",
+   "id": "d19a9abc",
    "metadata": {},
    "source": [
     "- Since we know more than half of those those in age group 0.0 and 1.0 were transported to another dimension, we can focus more of our rescue crews to help find those in those age groups since they are the youngest. They might not survive being on their own in another dimension. Especially if we don't know what kind of alternate dimension they were transported to."
@@ -4713,7 +4713,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x179c70e30c8>"
+       "<matplotlib.legend.Legend at 0x11ea3a62c88>"
       ]
      },
      "execution_count": 59,
@@ -5249,7 +5249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba83d20d",
+   "id": "32059985",
    "metadata": {},
    "source": [
     "## Room Service"
@@ -5257,7 +5257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f89c6de7",
+   "id": "6a5cb9f5",
    "metadata": {},
    "source": [
     "### Train Data"
@@ -5265,8 +5265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "9015e62d",
+   "execution_count": 65,
+   "id": "09165b49",
    "metadata": {},
    "outputs": [
     {
@@ -5275,7 +5275,7 @@
        "Text(0.5, 0, 'Money Spent')"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5298,7 +5298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04ffb8f4",
+   "id": "9a607705",
    "metadata": {},
    "source": [
     "- From the graph we can see that a vast amount of people didn't order any room service. there are a few who order up to 14,000 but a negligible amount."
@@ -5306,8 +5306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "0e12d540",
+   "execution_count": 66,
+   "id": "ec917388",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5321,8 +5321,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "b59a7e04",
+   "execution_count": 67,
+   "id": "08490d1d",
    "metadata": {},
    "outputs": [
     {
@@ -5499,7 +5499,7 @@
        "4      4   1          1       1.0      True  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5511,8 +5511,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "8d129218",
+   "execution_count": 68,
+   "id": "5f980b5a",
    "metadata": {},
    "outputs": [
     {
@@ -5521,7 +5521,7 @@
        "Text(0.5, 1.0, 'Passengers Transported')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5545,7 +5545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4c64438",
+   "id": "e64a296f",
    "metadata": {},
    "source": [
     "- For the People who did not order room service we can see that many were transported to another dimension. As for those who did order room service majority did not get transported."
@@ -5553,7 +5553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab8c347b",
+   "id": "b216548c",
    "metadata": {},
    "source": [
     "### Test Data"
@@ -5561,8 +5561,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "a428aa64",
+   "execution_count": 69,
+   "id": "d54a4d11",
    "metadata": {},
    "outputs": [
     {
@@ -5571,7 +5571,7 @@
        "<AxesSubplot:xlabel='RoomService', ylabel='Count'>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5592,7 +5592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddbbf6e1",
+   "id": "54b3e0c9",
    "metadata": {},
    "source": [
     "- Our testing data follows the same trend as our training data."
@@ -5600,7 +5600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe7bfe2a",
+   "id": "cabeb23f",
    "metadata": {},
    "source": [
     "## Amenities Distribution Plots"
@@ -5608,8 +5608,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "1163eec1",
+   "execution_count": 70,
+   "id": "6b85d868",
    "metadata": {},
    "outputs": [
     {
@@ -5618,7 +5618,7 @@
        "<AxesSubplot:xlabel='FoodCourt', ylabel='Count'>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5639,8 +5639,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "9cab4cc1",
+   "execution_count": 71,
+   "id": "34919300",
    "metadata": {},
    "outputs": [
     {
@@ -5649,7 +5649,7 @@
        "<AxesSubplot:xlabel='ShoppingMall', ylabel='Count'>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5670,8 +5670,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "1f96f9b2",
+   "execution_count": 72,
+   "id": "3c63bbde",
    "metadata": {},
    "outputs": [
     {
@@ -5680,7 +5680,7 @@
        "<AxesSubplot:xlabel='Spa', ylabel='Count'>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5701,8 +5701,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "d9811da9",
+   "execution_count": 73,
+   "id": "4020655f",
    "metadata": {},
    "outputs": [
     {
@@ -5711,7 +5711,7 @@
        "<AxesSubplot:xlabel='VRDeck', ylabel='Count'>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5732,11 +5732,230 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e903fc64",
+   "id": "4c2894ed",
    "metadata": {},
    "source": [
     "- After seeing the same trend within all the amenities the ship had to offer, I am going to make a separate column that is True if the person spent any money on amenities and false other wise."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23252b1c",
+   "metadata": {},
+   "source": [
+    "## Money Spent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "60d0c685",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HomePlanet</th>\n",
+       "      <th>CryoSleep</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>VIP</th>\n",
+       "      <th>RoomService</th>\n",
+       "      <th>FoodCourt</th>\n",
+       "      <th>ShoppingMall</th>\n",
+       "      <th>Spa</th>\n",
+       "      <th>VRDeck</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Transported</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Id</th>\n",
+       "      <th>GroupSize</th>\n",
+       "      <th>AgeGroup</th>\n",
+       "      <th>RService</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Europa</td>\n",
+       "      <td>False</td>\n",
+       "      <td>B/0/P</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Maham Ofracculy</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Earth</td>\n",
+       "      <td>False</td>\n",
+       "      <td>F/0/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>549.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>Juanna Vines</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Europa</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A/0/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>3576.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6715.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>Altark Susent</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Europa</td>\n",
+       "      <td>False</td>\n",
+       "      <td>A/0/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>371.0</td>\n",
+       "      <td>3329.0</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>Solam Susent</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Earth</td>\n",
+       "      <td>False</td>\n",
+       "      <td>F/1/S</td>\n",
+       "      <td>TRAPPIST-1e</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>303.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Willy Santantines</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  HomePlanet  CryoSleep  Cabin  Destination   Age    VIP  RoomService  \\\n",
+       "0     Europa      False  B/0/P  TRAPPIST-1e  39.0  False          0.0   \n",
+       "1      Earth      False  F/0/S  TRAPPIST-1e  24.0  False        109.0   \n",
+       "2     Europa      False  A/0/S  TRAPPIST-1e  58.0   True         43.0   \n",
+       "3     Europa      False  A/0/S  TRAPPIST-1e  33.0  False          0.0   \n",
+       "4      Earth      False  F/1/S  TRAPPIST-1e  16.0  False        303.0   \n",
+       "\n",
+       "   FoodCourt  ShoppingMall     Spa  VRDeck               Name  Transported  \\\n",
+       "0        0.0           0.0     0.0     0.0    Maham Ofracculy        False   \n",
+       "1        9.0          25.0   549.0    44.0       Juanna Vines         True   \n",
+       "2     3576.0           0.0  6715.0    49.0      Altark Susent        False   \n",
+       "3     1283.0         371.0  3329.0   193.0       Solam Susent        False   \n",
+       "4       70.0         151.0   565.0     2.0  Willy Santantines         True   \n",
+       "\n",
+       "   Group  Id  GroupSize  AgeGroup  RService  \n",
+       "0      1   1          1       3.0     False  \n",
+       "1      2   1          1       2.0      True  \n",
+       "2      3   1          2       5.0      True  \n",
+       "3      3   2          2       3.0     False  \n",
+       "4      4   1          1       1.0      True  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "9bc35901",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amen_cols = [\"RoomService\", \"FoodCourt\", \"ShoppingMall\", \"Spa\", \"VRDeck\"]\n",
+    "\n",
+    "for col in amen_cols:\n",
+    "    train_df[col].apply(lambda x: True if (x > 0.0) else False) \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb4cbcc7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
